<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paint4Android</string>

    <string name="action_help">Info</string>
    <string name="action_help_text">Developed by @vicmonmena. Let\'s draw!</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    
    <string name="action_size">Path size</string>
    <string name="action_shape">Path shape</string>
    
    <string name="color_red">Red</string>
    <string name="color_black">Black</string>
    <string name="color_custom">Custom</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    
    <string name="path_size">Path size</string>
    <string name="size_super">Super</string>
    <string name="size_large">Large</string>
    <string name="size_medium">Medium</string>
    <string name="size_small">Small</string>
    <string name="size_micro">Micro</string>
    
    <string name="path_shape">Path shape</string>
    <string name="shape_round">Round</string>
    <string name="shape_square">Square</string>
    <string name="shape_butt">Irregular</string>
    
    <string name="rubber">Rubber</string>
    <string name="clean_message">Sure you want to clean the screen?</string>
    
    <string name="save_ok">Oh Yeah! Your draw was saved sucessfully!</string>
    <string name="save_fail">Oop! An error has happend! Please, contact to @vicmonmena</string>
    
    <string name="share_message">Look! I have done it with Paint4Android developed by @vicmonmena</string>
    
    <string name="warning">Warning!</string>
    <string name="sensor_not_available">Accelerometer not available on your device</string>
    
    <string name="set_custom_color">Set your custom color in hexadecimal (RRGGBB)</string>
</resources>
