<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/roundShape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/shape_round"
        android:drawableLeft="@drawable/ic_shape_round"
        android:gravity="center_vertical"
        android:text="@string/shape_round"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/squareShape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/shape_square"
        android:drawableLeft="@drawable/ic_shape_square"
        android:gravity="center_vertical"
        android:text="@string/shape_square"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/buttShape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/shape_butt"
        android:drawableLeft="@drawable/ic_shape_butt"
        android:gravity="center_vertical"
        android:text="@string/shape_butt"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
